fix: navbar left-side buttons overflow on small screens

--- a/src/components/Navigation/NavBar.module.css
+++ b/src/components/Navigation/NavBar.module.css
@@ -152,4 +152,12 @@
 		margin-right: auto;
 		gap: 0;
 	}
+
+	.left-side-buttons {
+		gap: 0.3rem;
+	}
+
+	.square-button {
+		padding: 0.3rem;
+	}
 }
